--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <h3>And I'm a <span class="multiple-text" id="mytext"><!--Informatics Engineering Undergraduate--></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id fuga eaque aperiam, modi, tenetur et ex veritatis dolores unde molestias fugit nisi aliquid consectetur dignissimos? Doloribus repellat debitis repellendus magni.</p>
             <div class="social-media">
-                <a href="#" style="--i:7;"><img src="./assets/logo/facebook-logo-24.png" alt="facebook-logo"></a>
-                <a href="#" style="--i:8;"><img src="./assets/logo/instagram-alt-logo-24.png" alt="instagram-logo"></a>
-                <a href="#" style="--i:9;"><img src="./assets/logo/linkedin-logo-24.png" alt="linkedin-logo"></a>
-                <a href="#" style="--i:10;"><img src="./assets/logo/youtube-logo-24.png" alt="youtube-logo"></a>
+                <a href="https://www.facebook.com/profile.php?id=100033274762510" style="--i:7;"><img src="./assets/logo/facebook-logo-24.png" alt="facebook-logo"></a>
+                <a href="https://www.instagram.com/yeftaasyel_/" style="--i:8;"><img src="./assets/logo/instagram-alt-logo-24.png" alt="instagram-logo"></a>
+                <a href="https://www.linkedin.com/in/yefta-yosia-asyel" style="--i:9;"><img src="./assets/logo/linkedin-logo-24.png" alt="linkedin-logo"></a>
+                <a href="https://youtube.com/@yeftakun" style="--i:10;"><img src="./assets/logo/youtube-logo-24.png" alt="youtube-logo"></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="./assets/files/Yefta's CV.jpg" download="Yefta's_CV.jpg" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
