--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Webpage Yefta</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="./assets/logo/miaw.ico">
 </head>
 
 <body>
@@ -17,8 +18,8 @@
         <nav class="navbar">
             <a href="#" style="--i:1" class="active">Home</a>
             <a href="./page/gallery.html" style="--i:2">Gallery</a>
-            <a href="#" style="--i:3">Blog</a>
-            <a href="#" style="--i:4">Contact</a>
+            <a href="./page/blog.html" style="--i:3">Blog</a>
+            <a href="./page/contact.html" style="--i:4">Contact</a>
         </nav>
     </header>
 
