--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
             <a href="#" style="--i:1" class="active">Home</a>
             <a href="./page/gallery.html" style="--i:2">Gallery</a>
             <a href="./page/blog.html" style="--i:3">Blog</a>
-            <a href="./page/contact.html" style="--i:4">Contact</a>
+            <div class="dropdown" id="contactDropdown">
+                <a href="#" class="contact" style="--i:4">Contact</a>
+                <div class="dropdown-content">
+                    <a href="./page/contact-list/contact-email.html">E-mail</a>
+                    <a href="./page/contact-list/contact-wa.html">WhatsApp</a>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -44,6 +50,7 @@
     </section>
 
     <script src="./script/anim-type.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 
